--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
@@ -311,9 +311,11 @@ footer .card3 h5{
         /* background-color:rebeccapurple; */
         display: flex;
         flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+        align-items: start;
+        justify-content: start;
+        gap: 0px;
     }
+
 
     #email{
         width: 90vw;
@@ -323,8 +325,14 @@ footer .card3 h5{
 
     #phonenumber{
         padding: 0px;
-        width: 40vw;
+        width: 35vw;
         /* background-color: rebeccapurple; */
+    }
+
+    #date{
+        /* padding: 0px; */
+        width: 40vw;
+
     }
 
     #address{
@@ -403,6 +411,11 @@ footer .card3 h5{
 
     footer .card3 h5 span{
         font-size: 2.5vw;
+    }
+
+    #cEmail{
+        display: flex;
+        flex-direction: column;
     }
 
     
