--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/checkout.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/checkout.css
@@ -346,7 +346,7 @@ h1 {
 
     #paymentbtn2{
         display: block;
-        margin-left: -200px;
+        margin-left: -30vw;
     }
 
     #paymentbtnLink{
