--- a/backend/pratise backend/practice project pin/pin/views/about.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/about.ejs
@@ -1,5 +1,6 @@
 <% include ./partial/header.ejs %>
     <link rel="stylesheet" href="/stylesheets/about.css">
+
     <div class="page1">
         <h1>WHY WE EXIST</h1>
         <div class="card">
@@ -13,75 +14,81 @@
             alt="">
         <h2 class="headbtn">SO FAR TWO GOOD</h2>
     </div>
-    <div class="page2">
-        <video autoplay muted loop src="/videos/final.mp4"></video>
-    </div>
-    <div class="page3">
-        <div class="card">
-            <h1>01</h1>
-            <h1>WHO WE ARE</h1>
-            <i class="ri-arrow-up-s-line"></i>
+    <div class="main">
+        <div class="page2">
+            <video autoplay muted loop src="/videos/final.mp4"></video>
         </div>
-        <div class="card2">
-            <p>We’re the people who believe in second chances. Who believe that we are better together. Who believe in
-                people, until they believe in themselves again.</p>
-            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c005cfd171f055933d5e944f0f2795a0627916f9-7714x5143.jpg/HQ-Group-Shot-Jes-Lindsay-4443.jpg?rect=0,2,7714,5141&w=1280&h=853&auto=format"
-                alt="">
-        </div>
-        <div class="card3">
-            <p>It all started when our founder Rob Caslick and two mates wheeled up a BBQ to Kings Cross to cook the
-                very best, wholesome food for those living rough. Their ’anything but snags’ proposition stood out and
-                it wasn’t long before they garnered a loyal following. ‘How can we scale from here?’, they thought.
-                That’s when the Buy 1, Give 1’ model came into play. Rob took a jar around the corner to see if a local
-                domestic violence refuge would like some lunches too and it grew organically from there.
-            </p><span>
-                We have since collaborated with some of the country’s best chefs to deliver the best meals we can, to
-                domestic violence shelters and people in need. It didn’t take long for our ‘Buy 1, Give 1’ idea to
-                extend to luxury gift packs and self care essentials, designed to spark a sense of self-worth at a time
-                of intense vulnerability.</span>
-            <p>Social employment, however, is where we create the greatest impact. Through our flagship ‘Work Work’
-                employment pathways programs, we hire the women from the shelters we serve, empowering them to
-                re-establish their self-belief and independence, while bridging the ‘love and skills’ gap in their
-                journey to re-entering the workforce after living in crisis.
+        <div class="page3">
+            <div class="card">
+                <h1>01</h1>
+                <h1>WHO WE ARE</h1>
+                <i class="ri-arrow-up-s-line"></i>
+            </div>
+            <div class="card2">
+                <p>We’re the people who believe in second chances. Who believe that we are better together. Who believe
+                    in
+                    people, until they believe in themselves again.</p>
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c005cfd171f055933d5e944f0f2795a0627916f9-7714x5143.jpg/HQ-Group-Shot-Jes-Lindsay-4443.jpg?rect=0,2,7714,5141&w=1280&h=853&auto=format"
+                    alt="">
+            </div>
+            <div class="card3">
+                <p>It all started when our founder Rob Caslick and two mates wheeled up a BBQ to Kings Cross to cook the
+                    very best, wholesome food for those living rough. Their ’anything but snags’ proposition stood out
+                    and
+                    it wasn’t long before they garnered a loyal following. ‘How can we scale from here?’, they thought.
+                    That’s when the Buy 1, Give 1’ model came into play. Rob took a jar around the corner to see if a
+                    local
+                    domestic violence refuge would like some lunches too and it grew organically from there.
+                </p><span>
+                    We have since collaborated with some of the country’s best chefs to deliver the best meals we can,
+                    to
+                    domestic violence shelters and people in need. It didn’t take long for our ‘Buy 1, Give 1’ idea to
+                    extend to luxury gift packs and self care essentials, designed to spark a sense of self-worth at a
+                    time
+                    of intense vulnerability.</span>
+                <p>Social employment, however, is where we create the greatest impact. Through our flagship ‘Work Work’
+                    employment pathways programs, we hire the women from the shelters we serve, empowering them to
+                    re-establish their self-belief and independence, while bridging the ‘love and skills’ gap in their
+                    journey to re-entering the workforce after living in crisis.
 
-                Basically, we’re the people who just want to do some good. And we reckon you’re one of those people,
-                too.</p>
+                    Basically, we’re the people who just want to do some good. And we reckon you’re one of those people,
+                    too.</p>
+            </div>
         </div>
-    </div>
-    <div class="page4">
-        <div class="card">
-            <h1>02</h1>
-            <h1 class="textTage">MISSION AND VALUES</h1>
-            <i class="ri-arrow-down-s-line"></i>
-            <img src="https://images.pexels.com/photos/709689/pexels-photo-709689.jpeg?auto=compress&cs=tinysrgb&w=600"
-                alt="">
+        <div class="page4">
+            <div class="card">
+                <h1>02</h1>
+                <h1 class="textTage">MISSION AND VALUES</h1>
+                <i class="ri-arrow-down-s-line"></i>
+                <img src="https://images.pexels.com/photos/709689/pexels-photo-709689.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
 
 
+            </div>
+            <div class="card">
+                <h1>03</h1>
+                <h1 class="textTage">OUR TEAM</h1>
+                <i class="ri-arrow-down-s-line"></i>
+                <img src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+            </div>
+            <div class="card">
+                <h1>04</h1>
+                <h1 class="textTage">RECONSILATION</h1>
+                <i class="ri-arrow-down-s-line"></i>
+                <img src="https://images.pexels.com/photos/1131774/pexels-photo-1131774.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+            </div>
+            <div class="card">
+                <h1>05</h1>
+                <h1 class="textTage">GOOD PEOPLE</h1>
+                <i class="ri-arrow-down-s-line"></i>
+                <img src="https://images.pexels.com/photos/1767434/pexels-photo-1767434.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+            </div>
         </div>
-        <div class="card">
-            <h1>03</h1>
-            <h1 class="textTage">OUR TEAM</h1>
-            <i class="ri-arrow-down-s-line"></i>
-            <img src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=600"
-                alt="">
-        </div>
-        <div class="card">
-            <h1>04</h1>
-            <h1 class="textTage">RECONSILATION</h1>
-            <i class="ri-arrow-down-s-line"></i>
-            <img src="https://images.pexels.com/photos/1131774/pexels-photo-1131774.jpeg?auto=compress&cs=tinysrgb&w=600"
-                alt="">
-        </div>
-        <div class="card">
-            <h1>05</h1>
-            <h1 class="textTage">GOOD PEOPLE</h1>
-            <i class="ri-arrow-down-s-line"></i>
-            <img src="https://images.pexels.com/photos/1767434/pexels-photo-1767434.jpeg?auto=compress&cs=tinysrgb&w=600"
-                alt="">
-        </div>
-    </div>
 
-    <!-- <div> -->
+        <!-- <div> -->
         <div class="page5">
             <div class="endpage">
                 <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
@@ -143,5 +150,7 @@
             <h5 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h5>
         </div>
 
-        <script src="/javascripts/about.js"></script>
-        <% include ./partial/footer.ejs %>
+    </div>
+
+    <script src="/javascripts/about.js"></script>
+    <% include ./partial/footer.ejs %>
