--- a/backend/pratise backend/practice project pin/pin/views/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catering.ejs
@@ -121,7 +121,7 @@
             <div class="card1">
                 <h5>Two Good Co</h5>
                 <h5>0497 889 927</h5>
-                <h5>sydneycatering@twogood.com.au</h5>
+                <h5 id="cEmail">sydneycatering@<Span>twogood.com.au</Span></h5>
                 <h5>255 Wilson Street</h5>
                 <h5>Eveleigh 2010</h5>
                 <h5>Australia</h5>
@@ -135,7 +135,7 @@
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-twitter"></i>
                 </div>
-                <h5>© 2024 Two Good Co
+                <h5 class="good">© 2024 Two Good Co
                     <span>Powered by FoodStorm</span>
                 </h5>
             </div>
