--- a/backend/pratise backend/practice project pin/pin/views/razorpayPayment.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/razorpayPayment.ejs
@@ -61,26 +61,26 @@
     <div style="display: flex; align-items: start; justify-content: start; flex-direction: column;">
         <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
 
-            <h1 style="font-size: 25px; font-weight: 500;"> <strong id="cutName">Cust_Name:</strong>
+            <h1 > <strong id="cutName">Cust_Name:</strong>
                 <%= user.first_name %>
             </h1>
-            <h1 style="font-size: 25px; font-weight: 500;">
+            <h1 >
                 <%= user.last_name %>
             </h1>
         </div>
         <div style="display: flex; align-items: center; justify-content: center;gap: 100px;">
-            <h1 style="font-size: 20px; font-weight: 500;"><strong>Email:</strong> <br>
+            <h1><strong>Email:</strong> <br>
                 <%= user.email %>
             </h1>
-            <h1 style="font-size: 20px; font-weight: 500;"> <strong>Mobile:</strong> <br>
+            <h1 > <strong>Mobile:</strong> <br>
                 <%= user.phone_number %>
             </h1>
         </div>
         <div style="display: flex; align-items: center; justify-content: center;gap: 100px;">
-            <h1 style="font-size: 20px; font-weight: 500;"> <strong>address:</strong> <br>
+            <h1> <strong>address:</strong> <br>
                 <%= user.address %>
             </h1>
-            <h1 style="font-size: 20px; font-weight: 500;"> <strong>pincode</strong> <br>
+            <h1 > <strong>pincode</strong> <br>
                 <%= user.pastcode %>
             </h1>
         </div>
