--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
@@ -484,6 +484,11 @@ h4{
         font-size: 2.5vw;
     }
 
+    #cEmail{
+        display: flex;
+        flex-direction: column;
+    }
+
    
 
   
