--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/shop.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/shop.css
@@ -293,7 +293,7 @@ body{
 
   /* product page2*/
     .page2{
-      min-height: 60vh;
+      min-height: 50vh;
       width: 100%;
       display: flex;
       align-items: center;
@@ -301,6 +301,7 @@ body{
       flex-direction: row;
       opacity: 1;
       /* background-color: red; */
+      padding: 0px;
       
   }
 
@@ -337,6 +338,8 @@ body{
       justify-content:space-around;
       flex-direction: row;
       opacity: 1;
+      /* background-color: rebeccapurple; */
+      padding: 0px;
 
     
   }
@@ -458,7 +461,7 @@ body{
   .page6 svg{
     height: 10vh;
     width: 100%;
-    opacity: 0;
+    opacity: 1;
   }
 
   
