--- a/backend/pratise backend/practice project pin/pin/views/stories.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/stories.ejs
@@ -1,209 +1,103 @@
 <% include ./partial/header.ejs %>
     <link rel="stylesheet" href="/stylesheets/stories.css">
-    <style>
-        @media (max-width:600px) {
-            body {
-                overflow-x: hidden;
-            }
 
-            body::-webkit-scrollbar {
-                display: block;
-                width: 7px;
-                background-color: #fff;
-            }
+    <div class="page1">
+        <div class="card">
+            <h1 style="font-size: 11vw; letter-spacing: 1px;">STORIES</h1>
+        </div>
+        <div class="card2">
+            <h5 class="stories">The narrative of Two Good Co is far
+                reaching. Here, you will find many different voices; we can’t tell our story without telling theirs.
+                Every perspective adds another dimension to who we are and what we mean to the world.</h5>
+            <h5 class="showall"><span>FILTER</span>
+                SHOW ALL <span><i class="ri-arrow-down-line"></i></span>
+            </h5>
+        </div>
+    </div>
 
-            body::-webkit-scrollbar-thumb {
-                background-color: #827f7f;
-                border-radius: 50px;
-            }
-
-            .page1 {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-            }
-
-            .page1 .card2 {
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-
-            }
-
-            .page1 .card2 .stories {
-                /* background-color: rebeccapurple; */
-                font-size: 5vw;
-                text-align: center;
-
-            }
-
-            .page1 .card2 .showall {
-                font-size: 3vw;
-                margin-bottom: 20px;
-
-
-            }
-
-
-            .page2 {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                width: 100%;
-            }
-
-
-            .largeimg {
-                height: 80vh;
-                width: 100%;
-                background-color: azure;
-                border-radius: 2px;
-                overflow: hidden;
-
-            }
-
-
-            .main{
-                height: 80vh;
-                width: 100%;
-                /* background-color:azure; */
-                border-radius: 2px;
-                overflow: hidden;
-            }
-
-            .page2 .largeimg .card1 .storyimg{
-                height: 80vh;
-                width: 100%;
-                /* background-color: red; */
-
-            }
-
-            .main .card1 .storyimg{
-                height: 80vh;
-                width: 100%;
-                /* background-color: rebeccapurple; */
-            }
-
-
-            .page2 .main .card1 .storyimg .storycardtext .textName{
-                /* color: yellow; */
-                margin-top: -180px;
-                text-align: start;
-                font-weight: 500;
-            }
-
-            .page2 .main .card1 .storyimg .storycardtext h4{
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-
-              
-            }
-
-            .page2 .largeimg .card1 .storyimg .storycardtext .textName{
-                margin-top: -180px;
-                text-align: start;
-                font-weight: 500;
-            }
-
-        }
-    </style>
-   
-        <div class="page1">
-            <div class="card">
-                <h1 style="font-size: 11vw; letter-spacing: 1px;">STORIES</h1>
+    <div class="page2">
+        <div class="main">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                    </div>
+                </div>
             </div>
-            <div class="card2">
-                <h5 class="stories">The narrative of Two Good Co is far
-                    reaching. Here, you will find many different voices; we can’t tell our story without telling theirs.
-                    Every perspective adds another dimension to who we are and what we mean to the world.</h5>
-                <h5 class="showall"><span>FILTER</span>
-                    SHOW ALL <span><i class="ri-arrow-down-line"></i></span>
-                </h5>
+        </div>
+        <div class="main">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="largeimg">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="page2">
-            <div class="main">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
+        <div class="main">
+            <div class="card1">
+                <div class="storyimg">
+                    <div class="storycardtext">
+                        <h4>writing by xyz <span>20-march-2024</span></h4>
+                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            necessitatibus ex odio,
+                            provident
+                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
                     </div>
                 </div>
             </div>
-            <div class="main">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="largeimg">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="main">
-                <div class="card1">
-                    <div class="storyimg">
-                        <div class="storycardtext">
-                            <h4>writing by xyz <span>20-march-2024</span></h4>
-                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus ex odio,
-                                provident
-                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
         </div>
+
+
+    </div>
 
 
     <script src="/javascripts/stories.js"></script>
