--- a/backend/pratise backend/practice project pin/pin/views/orderConfirmation.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/orderConfirmation.ejs
@@ -87,6 +87,12 @@
 
         }
 
+        #qty{
+            font-weight: 400; font-size: 2vh;
+
+        }
+        
+
         @media (max-width:600px) {
             .backToOrder {
                 font-size: 3vw;
@@ -130,6 +136,11 @@
                 font-size: 3vw;
             }
 
+            #qty {
+                font-weight: 400;
+                font-size: 2.5vw;
+            }
+
         }
     </style>
     <a class="backToOrder" href="/OwnOrder"><i class="fa-solid fa-arrow-left"></i> OrderPage</a>
@@ -157,7 +168,7 @@
                             </div>
                             <h5 style="font-weight: 400;"> Price: $<%= product.price %>
                             </h5>
-                            <h5 style="font-weight: 400; font-size: 2vh;">Qty: <%= product.quantity %>
+                            <h5 id="qty">Qty: <%= product.quantity %>
                             </h5>
                         </li>
                         <% } %>
