--- a/backend/pratise backend/practice project pin/pin/views/register.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/register.ejs
@@ -139,7 +139,7 @@
         <div class="card1">
             <h5>Two Good Co</h5>
             <h5>0497 889 927</h5>
-            <h5>sydneycatering@twogood.com.au</h5>
+            <h5 id="cEmail">sydneycatering@<Span>twogood.com.au</Span></h5>
             <h5>255 Wilson Street</h5>
             <h5>Eveleigh 2010</h5>
             <h5>Australia</h5>
