--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/register.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/register.css
@@ -287,13 +287,34 @@ h4{
     }
 
     .page2 .part1{
-        /* background-color: red; */
+        /* background-color: green; */
         padding: 0px 20px;
+    }
+
+    .page2 .part1 .card1{
+        /* background-color: red; */
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+        
+
     }
     .page2 .part2{
         /* background-color: red; */
         padding: 0px 20px;
     }
+
+    .page2 .part2 .card2{
+        /* background-color: yellow; */
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+    }
+
+
+
     .page2 .part3{
         /* background-color: red; */
         padding: 0px 20px;
@@ -323,25 +344,34 @@ h4{
     }
 
     #Email{
-        /* background-color: rebeccapurple; */
-        margin-right: 1px;
+   
+  
+        padding: 0px;
+
     }
 
-    .page2 .part1 .card2 .mobile{
-        padding: 0px;
-        width: 95%;
-        /* background-color: rebeccapurple; */
-    }
-    
     #email{
-        padding-right: 0.5vw;
-        margin-right: 40px;
+        width: 100%;
+
     }
+
+    .page2 .part1 .card2{
+        display: flex;
+        align-items: center;
+        justify-content:space-around;
+        gap: 10px;
+
+    }
+
+    #phone-number{
+        padding: 0px;
+            
+    }
+
 
   
 
     #address{
-        /* background-color: rebeccapurple; */
         border: 1px solid #111;
     }
 
@@ -389,4 +419,11 @@ h4{
     footer .card3 h5 span{
         font-size: 2.5vw;
     }
+
+    
+    #cEmail{
+        display: flex;
+        flex-direction: column;
+    }
+
 }
