optimize code awared web category page

--- a/backend/pratise backend/practice project pin/pin/views/Afternoon.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/Afternoon.ejs
@@ -84,6 +84,8 @@
         </div>
     </header>
     </div>
+
+
     <!-- pages -->
     <div class="page1">
         <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
@@ -131,34 +133,9 @@
     
     
     </div>
-    
-    
-    <footer>
-        <div class="card1">
-            <h5>Two Good Co</h5>
-            <h5>0497 889 927</h5>
-            <h5 id="cEmail">sydneycatering@<Span>twogood.com.au</Span></h5>
-            <h5>255 Wilson Street</h5>
-            <h5>Eveleigh 2010</h5>
-            <h5>Australia</h5>
-        </div>
-        <div class="card2">
-            <h5>Terms & Conditions</h5>
-        </div>
-        <div class="card3">
-            <div class="icone">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-            </div>
-            <h5 class="good">© 2024 Two Good Co
-                <span>Powered by FoodStorm</span>
-            </h5>
-        </div>
-    </footer>
-    <script src="/javascripts/afternoon.js"></script>
-    
-    
-</body>
-</html>
+
+<script src="/javascripts/afternoon.js"></script>
+<% include ./partial/cFooter.ejs %>
+
+
 
