--- a/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
@@ -1,35 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="/stylesheets/catering.css">
 </head>
 <body>
-
-    <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any
+    <h4 id="headingText">We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any
         questions.</h4>
-        <!-- serchbar  -->
     <div class="searbar"
         style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
-      
-        <!-- <form style="display: flex; align-items: center;" action="/Afternoon/search" method="post"> -->
         <p style="font-size: 20px; font-weight: 800;">Search: <input
                 style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;"
-                type="text" id="search" placeholder="Search for product" autocomplete="off"></p>
-        <i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
-            class="fa-solid fa-magnifying-glass"></i>
+                type="search" placeholder="Search for product"></p>
+        <a href="/lunch"><i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
+                class="fa-solid fa-magnifying-glass"></i></a>
         <a id="searbtn2" href="#"
             style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-            <i class="fa-solid fa-xmark"></i><button id="searchButton" style="border: none; font-size: 1vw; background-color: transparent;" type="submit">Search</button></a>
-        <!-- </form> -->
+            <i class="fa-solid fa-xmark"></i>Search</a>
     </div>
-    <!-- navbar -->
     <header class="navbar">
         <div class="part1">
             <a href="/catering"><svg id="svg1" class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
@@ -72,7 +61,7 @@
                         </clipPath>
                     </defs>
                 </svg></a>
-    
+
         </div>
         <div class="part2">
             <a href="/">Home</a>
@@ -80,67 +69,7 @@
             <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
-    
+
         </div>
     </header>
-
     
-    <!-- pages -->
-    <div class="page1">
-        <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
-            alt="">
-    </div>
-    
-    <div class="product-page lunch-product">
-        <div class="card1">
-            <div class="Atag">
-            <a style="text-decoration: none;color: #111;" href="/morningProduct"><h1>Morning</h1></a>
-            <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1>Lunch</h1></a>
-            <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
-            <a  style="text-decoration: none; font-weight:800;color: #111;" href="/evining"><h1 style="font-weight: 800;">Evening</h1></a>
-        </div>
-        <div class="nonAtag">
-            <h1>Individually Packeaged
-                Meals</h1>
-            <h1>Bio Disponsable</h1>
-    
-        </div>
-    
-        </div>
-        <div class="card2">
-    
-            <% if(eveningproducts.length > 0){ %>
-                <% eveningproducts.forEach(function(product){ %>
-                    <div class="cards">
-                        <div class="card">
-                            <h1><%=product.name %></h1>
-                            <h3><%=product.qty %></h3>
-                            <h1 style="font-size: 20px;"><%=product.price %></h1>
-                        </div>
-                        <div class="card2">
-                            <img src="<%=product.pimage %>"
-                                alt="">
-                
-                        </div>
-                
-                    </div>
-    
-               <% }) %>
-                <% }else if (query) { %>
-                    <p>No products found for "<%= query %>"</p>
-                  <% } %>
-             
-           
-           
-    
-        </div>
-    
-    </div>
-    
-
-<script src="/javascripts/afternoon.js"></script>
-<% include ./partial/cFooter.ejs %>
-
-
-
-
