--- a/backend/pratise backend/practice project pin/pin/views/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catering.ejs
@@ -20,6 +20,8 @@
     </div>
 
 
+
+    <!-- catering main page -->
     <div class="main">
         <div class="page1">
             <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
@@ -54,7 +56,7 @@
             <div class="card card5">
                 <h3>BIO DISPOSABLES</h3>
             </div>
-            <div class="card card6">
+            <div  class="card card6">
                 <h3>INDIVIDUALLY PACKAGED MEALS</h3>
             </div>
         </div>
