--- a/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
@@ -1,4 +1,3 @@
-
     
     <% include ./partial/cHeader.ejs %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -58,7 +57,7 @@
         </div>
 
 
-<script src="/javascripts/catring.js"></script>
+<script src="/javascripts/morningProduct.js"></script>
 <% include ./partial/cFooter.ejs %>
 
 
