--- a/backend/pratise backend/practice project pin/pin/views/partial/cFooter.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cFooter.ejs
@@ -1,5 +1,5 @@
-
-<footer>
+<link rel="stylesheet" href="/stylesheets/cFooter.css">
+<footer class="footer">
     <div class="card1">
         <h5>Two Good Co</h5>
         <h5>0497 889 927</h5>
@@ -26,6 +26,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-<script src="/javascripts/catring.js"></script>
+<!-- <script src="/javascripts/catring.js"></script> -->
 </body>
 </html>
