--- a/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/cHeader.css">
 </head>
+
 <body>
-    <h4 id="headingText">We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any
+    <h4 id="headingText">We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if
+        you have any
         questions.</h4>
     <div class="searbar"
         style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
@@ -66,10 +70,13 @@
         <div class="part2">
             <a href="/">Home</a>
             <a href="/bespoke">Bespoke Event</a>
-            <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
+            <!-- <div id="group"> -->
+                <a id="group" href="/group-order"><i class="fa-solid fa-users-line" id="group2"></i>group Order</a>
+            <!-- </div> -->
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
 
         </div>
     </header>
-    
+
+    <script src="/javascripts/cHeader.js"></script>
