--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/register.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/register.css
@@ -6,6 +6,7 @@
 body{
     height: 100%;
     width: 100%;
+    /* background-color: rebeccapurple; */
     overflow-x: hidden;
 }
 
@@ -20,51 +21,8 @@ body::-webkit-scrollbar-thumb{
     border-radius: 50px;
 }
 
-h4{
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-    background-color: aquamarine;
-    padding: 10px;
-}
-
-.navbar{
-    height: 100px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: sticky;
-    top:0;
-    z-index: 998;
-    background-color: #fff;
-}
 
 
-.navbar .part1 a{
-    color: #111;
-}
-
-
-.navbar .part2{
-    display: flex;
-    align-items: center;
-    gap: 50px;
-}
-
-.navbar .part2 a{
-    color: #111;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-
-.navbar .part2 #group{
-    display: flex;
-    text-align: start;
-    align-items: center;
-    gap: 10px;
-}
 
 
 .page1{
@@ -124,10 +82,7 @@ h4{
     /* background-color: rebeccapurple; */
 }
 
-/* #email{
-    padding-right: px;
-    background-color: rebeccapurple;
-} */
+
 
 #email{
     padding-right: 0.5vw;
@@ -211,88 +166,21 @@ h4{
 
 
 
-
-.footer{
-    height: 24vh;
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: #111;
-    color: #fff;
-    margin-top: 100px;
-}
-
-.footer .card2{
-    font-size: 20px;
-}
-
-
-.footer .card1{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    font-size: 20px;
-
-
-}
-
-
-.footer .card3{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-}
-
-
-.footer .card3 .icone{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 10px;
-}
-
-.footer .card3 h5{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-
-}
-
-
-
 @media (max-width:600px) {
 
-    body{
-        /* background-color: green; */
+    html,body{
+     
         overflow-x: hidden;
     }
 
 
-
-    h4{
-        width: 100%;
-        text-align: center;
-        font-size: 3vw;
-        background-color: aquamarine;
-        padding: 5px 0px;
-    }
-
-    #svg1{
-        height: 13vw;
-        width: 13vw;
-    }
-
     .page2 .part1{
-        /* background-color: green; */
+   
         padding: 0px 20px;
     }
 
     .page2 .part1 .card1{
-        /* background-color: red; */
+  
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -301,12 +189,12 @@ h4{
 
     }
     .page2 .part2{
-        /* background-color: red; */
+      
         padding: 0px 20px;
     }
 
     .page2 .part2 .card2{
-        /* background-color: yellow; */
+       
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -316,42 +204,44 @@ h4{
 
 
     .page2 .part3{
-        /* background-color: red; */
+       
         padding: 0px 20px;
     }
     .page2 .part4{
-        /* background-color: red; */
+     
         padding: 0px 20px;
     }
     .page2 .part5{
-        /* background-color: red; */
+       
         padding: 0px 20px;
     }
 
     .page2 input{
-        /* background-color: rebeccapurple; */
+   
         width: 100%;
         border: 1px solid #111;
+
     }
 
     #first_name{
         padding: 0px;
+      
     }
     
     #last_name{
        padding: 0px;
        margin: 0px;
+      
     }
 
     #Email{
-   
-  
         padding: 0px;
 
     }
 
     #email{
         width: 100%;
+  
 
     }
 
@@ -360,11 +250,13 @@ h4{
         align-items: center;
         justify-content:space-around;
         gap: 10px;
+    
 
     }
 
     #phone-number{
         padding: 0px;
+        
             
     }
 
@@ -387,43 +279,7 @@ h4{
         padding-right: 70px;
     }
     
-    .navbar .part2{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
-    }
 
-    .navbar .part2 a{
-        font-size: 3.5vw;
-        /* background-color: rebeccapurple; */
-    }
 
-    footer h5{
-        font-size: 2.5vw;
-    }
-
-    footer .card3 .icone{
-        margin-right: 15px;
-    }
-
-    footer .card3 .icone i{
-        font-size: 2.5vw;
-        /* background-color: red; */
-    }
-
-    footer .card3 .good{
-        font-size: 2.5vw;
-    }
-
-    footer .card3 h5 span{
-        font-size: 2.5vw;
-    }
-
-    
-    #cEmail{
-        display: flex;
-        flex-direction: column;
-    }
 
 }
