--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/stylesheets/catering.css">
+    <link rel="stylesheet" href="/stylesheets/lunch.css">
 
 
 
@@ -27,7 +27,7 @@
             alt="">
     </div>
 
-    <div class="product-page lunch-product">
+    <div class="lunch-product">
         <div class="card1">
             <div class="Atag">
                 <a style="text-decoration: none;color: #111;" href="/morningProduct">
